--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,3 +48,48 @@
 	height: 100%;
 
 }
+
+
+/* SCroller */
+
+#scroller {
+    background-color: #00b6ff;
+    color: #ffffff;
+    font-size: 14px;
+    height: 28px !important;
+    line-height:28px;
+    overflow: hidden;
+    position: relative;
+    padding-top: 1px;
+    font-family: Helvetica;  
+}
+.scrollingtext {
+    color: #ffffff;
+    white-space:nowrap;
+    position:absolute;
+    font-size: 14px;
+    font-style: oblique;
+}
+.scrollingtext a:link, .scrollingtext a:visited {
+    color: #ffffff;
+    font-size: 14px;
+}
+.scrollingtext a:visited {
+    text-decoration:none;
+}
+
+.review {
+    padding-right: 50px;
+}
+
+#static-text {
+    position: absolute;
+    padding: 0 10px;
+    background-color: #00b6ff;
+    z-index: 99999;
+    font-weight: bold;
+    font-family: times;
+}
+/*scroller end*/
+
+
