--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -1,20 +1,76 @@
-<p id="notice"><%= notice %></p>
+  <!-- score and innings dynamic -->
+  <% @battings1 = Batting.find_all_by_score_id_and_innings(@score.id,1) %>
+  <% @bowlings1 = Bowler.find_all_by_score_id_and_innings(@score.id,1) %>
+  <% @battings2 = Batting.find_all_by_score_id_and_innings(@score.id,2) %>
+  <% @bowlings2 = Bowler.find_all_by_score_id_and_innings(@score.id,2) %>
+  <% @battings = @battings1 + @battings2 %>
 
-<p>
-  <b>Team1:</b>
-  <%= @score.team1 %>
-</p>
+  <!-- end -->
 
-<p>
-  <b>Team2:</b>
-  <%= @score.team2 %>
-</p>
+  <div class="row row-offcanvas row-offcanvas-right">
+    <div class="col-xs-12 col-sm-9">
+      <div class="col-lg-12">
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <h3 class="panel-title">
+              <%= @score.team1 %> <i>Vs</i> <%= @score.team2 %>
+            </h3>
+          </div>
+          <div class="panel-body">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs">
+              <li class="active">
+                <a href="#innings1" data-toggle="tab">Ininngs 1</a>
+              </li>
+              <li>
+                <a href="#innings2" data-toggle="tab">Ininngs 2</a>
+              </li>
+              <li>
+                <a href="#innings3" data-toggle="tab">Profile</a>
+              </li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <div class="tab-pane active" id="innings1">
+                  <%= render "batting" %>
+              </div>
+              <div class="tab-pane" id="innings2">
+                <%= render "bowling" %>
+              </div>
+              <div class="tab-pane" id="innings3">
+                <%= render "profile" %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
+      <div class="list-group">
+        <b  class="list-group-item active">Match</b>
+  
+        <b  class="list-group-item"><%= @score.team1 %> <i>VS</i> <%= @score.team2 %></b>
+        <b class="list-group-item"><%= @score.toss %></b>
+  
+      </div>
+      <div class="list-group">
+        <b href="#" class="list-group-item active">Venue</b>
+        <b href="#" class="list-group-item"><%= @score.venue %></b>
+      </div>
+       <div class="list-group">
+        <b href="#" class="list-group-item active">Score</b>
+        <b href="#" class="list-group-item"><%= @score.team1 %>:<%= @score.scoreteam1 %></b>
+        <b href ="#" class="list-group-item"><%= @score.team2 %>:<%= @score.scoreteam2 %></b>
+      </div>
+    </div><!--/span-->
+  </div>
 
-<p>
-  <b>Toss:</b>
-  <%= @score.toss %>
-</p>
 
-
-<%= link_to 'Edit', edit_score_path(@score) %> |
-<%= link_to 'Back', scores_path %>
+<style type="text/css">
+ul{
+  list-style-type: none;
+}
+li{
+  padding: 1em;
+}
+</style>
