--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,5 +69,8 @@ a:hover
 {
 	background: transparent;
 	color: #232323;
-} 
+}
+body{
+	background-image: url('http://sports.ndtv.com/images/ndtvsports/low_contrast_linen.png');
+}
 </style>
