score index and sho

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -17,8 +17,8 @@
         <tr>
           <td><%= score.id %></td>
           <td><%= score.name %></td>
-          <td><%= score.team1 %></td>
-          <td><%= score.team2 %></td>
+          <td><%= Team.find(score.team1).name %></td>
+          <td><%= Team.find(score.team2).name %></td>
           <td><%= score.scoreteam1 %></td>
           <td><%= score.scoreteam2 %></td>
           <td><%= score.venue %></td>
