--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -13,7 +13,7 @@
         <div class="panel panel-info">
           <div class="panel-heading">
             <h3 class="panel-title">
-              <%= @score.team1 %> <i>Vs</i> <%= @score.team2 %>
+              <%= Team.find(@score.team1).name %> <i>Vs</i> <%= Team.find(@score.team2).name %>
             </h3>
           </div>
           <div class="panel-body">
@@ -49,7 +49,7 @@
       <div class="list-group">
         <b  class="list-group-item active">Match</b>
   
-        <b  class="list-group-item"><%= @score.team1 %> <i>VS</i> <%= @score.team2 %></b>
+        <b  class="list-group-item"><%= Team.find(@score.team1).name %> <i>VS</i> <%= Team.find(@score.team2).name %></b>
         <b class="list-group-item"><%= @score.toss %></b>
   
       </div>
@@ -59,8 +59,8 @@
       </div>
        <div class="list-group">
         <b href="#" class="list-group-item active">Score</b>
-        <b href="#" class="list-group-item"><%= @score.team1 %>:<%= @score.scoreteam1 %></b>
-        <b href ="#" class="list-group-item"><%= @score.team2 %>:<%= @score.scoreteam2 %></b>
+        <b href="#" class="list-group-item"><%= Team.find(@score.team1).name %>:<%= @score.scoreteam1 %></b>
+        <b href ="#" class="list-group-item"><%= Team.find(@score.team2).name %>:<%= @score.scoreteam2 %></b>
       </div>
     </div><!--/span-->
   </div>
